manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clockaks01
spec:
  selector:
      matchLabels:
        app: clockacr01
  replicas: 3
  template:
      metadata:
        labels:
            app: clockaks01
      spec:
        containers:
        - name: clockacr01
          image: "clockacr01.azurecr.io/clockaks01:v1"
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
